# firefighter_isaacsim_ros2

./: .gitignore  README_FIREFIGHTER.md  manual_test_commands.sh  run_firefighter_sim.sh  run_python.sh  test_firefighter_commands.sh
src/firefighter_description/: CMakeLists.txt  package.xml
src/firefighter_description/config/: joint_names_TrackedRobot.yaml
src/firefighter_description/launch/: rsp.launch.py
src/firefighter_description/rviz/: firefighter.rviz
src/firefighter_description/scripts/: firefighter_articulation.py  firefighter_isaacsim.py  getting_started_robot.py
src/firefighter_description/urdf/: TrackedRobot.csv  firefighter.urdf
src/firefighter_description/urdf/firefighter/: firefighter.usd
src/firefighter_description/urdf/firefighter/configuration/: firefighter_base.usd  firefighter_physics.usd  firefighter_sensor.usd
src/firefighter_interfaces/: CMakeLists.txt  package.xml
src/firefighter_interfaces/msg/: FlipperCommand.msg
